--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "type": "module",
   "description": "ADPT Mark 6 - Local AI Study Planner + Node.js Backend (offline cache + custom API key)",
-  "main": "server/server.js",
+  "main": "server/index.js",
   "scripts": {
     "dev": "vite",
-    "server": "node server/server.js",
+    "server": "node server/index.js",
     "dev:all": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "vite build",
     "build:dev": "vite build --mode development",
@@ -53,8 +53,8 @@
     "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
     "input-otp": "^1.4.2",
-    "multer": "^1.4.5-lts.1",
     "lucide-react": "^0.462.0",
+    "multer": "^1.4.5-lts.1",
     "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "react": "^18.3.1",
@@ -67,6 +67,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
   },
