--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 # ADPT Mark 6 Environment Variables
 PORT=5000
 OPENAI_API_KEY=your_openai_api_key_here
+# Your server api base url
+VITE_API_URL=http://localhost:5001
